--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                             Que tal uma Landing Page?
                         </h3>
                     </div>
-                    <p>
+                    <p class="detalhes">
                         Crio Landing Pages personalizadas para expandir
                         seu alcance e aumentar suas conversões de
                         forma eficiente.
@@ -142,7 +142,7 @@
                         </h3>
                     </div>
 
-                    <p>
+                    <p class="detalhes">
                         Desenvolvo sites personalizados para
                         fortalecer sua presença online,
                         ajudando a destacar sua marca e
@@ -158,7 +158,7 @@
                             Que tal um sistema?
                         </h3>
                     </div>
-                    <p>
+                    <p class="detalhes">
                         Desenvolvo sistemas personalizados para
                         aumentar a eficiência e otimizar os
                         processos da sua empresa.
@@ -370,7 +370,7 @@
 
             </div>
         </div>
-        <p>
+        <p class="direitos">
             © Giovanni Martins (@gsmartins216) 2025 - Todos os direitos reservados.
         </p>
     </footer>
